src/test/ui/consts/const-match-pattern-arm.stderr
error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-match-pattern-arm.rs:3:23
   |
LL | const x: bool = match Some(true) {
   |                       ^^^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-match-pattern-arm.rs:5:5
   |
LL |     Some(value) => true,
   |     ^^^^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-match-pattern-arm.rs:11:11
   |
LL |     match Some(true) {
   |           ^^^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-match-pattern-arm.rs:13:9
   |
LL |         Some(value) => true,
   |         ^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0019`.
